--- a/src/styles/helpers/variables.scss
+++ b/src/styles/helpers/variables.scss
@@ -52,7 +52,7 @@ $breakpoint-xxl: 1920px;
 
 // grid columns
 $col-count-m: 4;
-$col-count-t: 4;
+$col-count-t: 8;
 $col-count-d: 12;
 
 $col-pad-m: getRem(20px);
